# Render-Visualizer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
include/render_visualizer/: blackboard.hpp  execution_context.hpp  graph_blackboard.hpp  graph_model_types.hpp  graph_persistence.hpp  main_pass.hpp  node_annotations.hpp  node_graph.hpp  node_registration.hpp  node_value_types.hpp  raster_node.hpp  runtime.hpp  type_reflection.hpp  type_registry.hpp
include/render_visualizer/node/: node_metadata.hpp  node_reflection.hpp  node_registry.hpp  operations.hpp
include/render_visualizer/nodes/: add_node.hpp  all.hpp  camera_node.hpp  command_nodes.hpp  dynamic_uniform_node.hpp  framebuffer_node.hpp  function_graph_nodes.hpp  function_nodes.hpp  gltf_node.hpp  graphics_pipeline_node.hpp  material_bindings_node.hpp  matrix_node.hpp  print_node.hpp  render_pass_node.hpp  sequence_node.hpp  shader_interface_support.hpp  (+9 more)
src/: CMakeLists.txt  main.cpp
src/app/: main.cpp
src/graph/: graph_persistence.cpp  node_graph.cpp
src/nodes/: all.cpp  camera_node.cpp  command_nodes.cpp  depth_buffer_node.cpp  dynamic_uniform_node.cpp  framebuffer_node.cpp  function_graph_nodes.cpp  function_nodes.cpp  gltf_node.cpp  graphics_pipeline_node.cpp  index_buffer_node.cpp  material_bindings_node.cpp  matrix_node.cpp  raster_node.cpp  render_pass_node.cpp  scroll_time_node.cpp  sequence_node.cpp  shader_interface_support.cpp  shader_module_node.cpp  support.cpp  texture_resource_node.cpp  uniform_data_node.cpp  variable_nodes.cpp  variable_support.cpp  vertex_buffer_node.cpp  virtual_struct_node.cpp  virtual_struct_support.cpp
src/render_visualizer/: CMakeLists.txt  blackboard.cpp
src/runtime/: runtime_facade.cpp  runtime_graph_traversal.cpp  runtime_lifecycle.cpp  runtime_plan_builder.cpp  runtime_render_commands.cpp  runtime_resource_build.cpp  runtime_services.cpp  runtime_slot_compiler.cpp  runtime_stack.cpp  runtime_types.cpp  runtime_vm_execution.cpp
src/ui/: app_shell.cpp  editor.cpp  runtime_panels.cpp  shared_editors.cpp  widgets.cpp
(+39 files in other folders)
